[prasanna]: add Swagger to fandoonotes
